--- a/ImageEditor/View/Base.lproj/Main.storyboard
+++ b/ImageEditor/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ee3-Ya-SIJ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Display Image View Controller-->
+        <!--Choose a Picure-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="DisplayImageViewController" id="BYZ-38-t0r" customClass="DisplayImageViewController" customModule="ImageEditor" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,10 +18,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Udg-2i-Cj2">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wWC-40-mlN">
-                                        <rect key="frame" x="5" y="5" width="404" height="808"/>
+                                        <rect key="frame" x="5" y="5" width="404" height="764"/>
                                         <color key="backgroundColor" systemColor="systemTealColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VKl-AZ-HyF">
                                             <size key="itemSize" width="200" height="190"/>
@@ -70,13 +70,119 @@
                             <constraint firstItem="Udg-2i-Cj2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="yGd-BG-4Ql"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Choose a Picure" id="GZc-w0-e0J"/>
                     <connections>
                         <outlet property="imageCollectionView" destination="wWC-40-mlN" id="jaP-JV-e6s"/>
+                        <segue destination="FGm-bb-CRd" kind="presentation" identifier="showImage" id="z7v-Zc-EDv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="227.536231884058" y="128.57142857142856"/>
+            <point key="canvasLocation" x="1214.4927536231885" y="128.57142857142856"/>
+        </scene>
+        <!--Edit Image View Controller-->
+        <scene sceneID="oRe-gQ-bNq">
+            <objects>
+                <viewController id="FGm-bb-CRd" customClass="EditImageViewController" customModule="ImageEditor" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="G2G-pw-OQ8">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UiJ-G9-cE8">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nfz-Hq-PcK">
+                                        <rect key="frame" x="8" y="8" width="398" height="500"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z7K-lK-fwi">
+                                        <rect key="frame" x="132" y="520" width="75" height="45"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.28907240940000001" green="0.93744907099999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Transfer"/>
+                                        <connections>
+                                            <action selector="applyTransferEffect:" destination="FGm-bb-CRd" eventType="touchUpInside" id="FN1-Ab-CsL"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VUH-Eh-vJG">
+                                        <rect key="frame" x="216" y="520" width="75" height="45"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.28907240940000001" green="0.93744907099999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Black"/>
+                                        <connections>
+                                            <action selector="applyBlackEffect:" destination="FGm-bb-CRd" eventType="touchUpInside" id="pih-A9-88O"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DcW-bt-gdj">
+                                        <rect key="frame" x="299" y="520" width="75" height="45"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.28907240940000001" green="0.93744907099999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Blur"/>
+                                        <connections>
+                                            <action selector="applyBlur:" destination="FGm-bb-CRd" eventType="touchUpInside" id="Ucg-SA-8EZ"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TA3-Wb-YQZ">
+                                        <rect key="frame" x="129" y="725" width="156" height="53"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.62626403570175171" green="0.92157292366027832" blue="0.82281714677810669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Reset"/>
+                                        <connections>
+                                            <action selector="clearFilters:" destination="FGm-bb-CRd" eventType="touchUpInside" id="MKl-H9-phf"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fit-hO-0ya">
+                                        <rect key="frame" x="49" y="520" width="75" height="45"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.28907240940000001" green="0.93744907099999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Sepia"/>
+                                        <connections>
+                                            <action selector="applySepia:" destination="FGm-bb-CRd" eventType="touchUpInside" id="eTJ-5R-UiZ"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Nfz-Hq-PcK" firstAttribute="top" secondItem="UiJ-G9-cE8" secondAttribute="top" constant="8" id="Dxy-fc-BPf"/>
+                                    <constraint firstItem="Nfz-Hq-PcK" firstAttribute="leading" secondItem="UiJ-G9-cE8" secondAttribute="leading" constant="8" id="XzH-Ua-qN6"/>
+                                    <constraint firstAttribute="bottom" secondItem="Nfz-Hq-PcK" secondAttribute="bottom" constant="300" id="ZB6-xo-c9n"/>
+                                    <constraint firstAttribute="trailing" secondItem="Nfz-Hq-PcK" secondAttribute="trailing" constant="8" id="uk2-AD-ZEF"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="izf-aT-yWQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="izf-aT-yWQ" firstAttribute="trailing" secondItem="UiJ-G9-cE8" secondAttribute="trailing" id="Gp3-Mb-wg8"/>
+                            <constraint firstItem="UiJ-G9-cE8" firstAttribute="top" secondItem="izf-aT-yWQ" secondAttribute="top" id="PKy-6O-mgr"/>
+                            <constraint firstItem="izf-aT-yWQ" firstAttribute="bottom" secondItem="UiJ-G9-cE8" secondAttribute="bottom" id="l0L-fV-t0x"/>
+                            <constraint firstItem="UiJ-G9-cE8" firstAttribute="leading" secondItem="izf-aT-yWQ" secondAttribute="leading" id="uPO-uq-VbV"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="agR-LH-q3F"/>
+                    <connections>
+                        <outlet property="image" destination="Nfz-Hq-PcK" id="LxT-He-g5t"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rHi-Xf-Lfz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2202.898550724638" y="128.57142857142856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="POG-Bj-3Ak">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ee3-Ya-SIJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="l8D-Ka-v9W">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="0a1-Yd-6Vf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gnd-Kz-5uy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="107" y="129"/>
         </scene>
     </scenes>
     <resources>
