--- a/ImageEditor/View/Base.lproj/Main.storyboard
+++ b/ImageEditor/View/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wWC-40-mlN">
                                         <rect key="frame" x="5" y="5" width="404" height="764"/>
-                                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                                        <color key="backgroundColor" systemColor="systemPurpleColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VKl-AZ-HyF">
                                             <size key="itemSize" width="200" height="190"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -90,13 +90,19 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UiJ-G9-cE8">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fwo-4Z-KcL">
+                                        <rect key="frame" x="8" y="601" width="398" height="199"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nfz-Hq-PcK">
                                         <rect key="frame" x="8" y="8" width="398" height="585"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TA3-Wb-YQZ">
                                         <rect key="frame" x="129" y="732" width="156" height="30"/>
                                         <color key="backgroundColor" red="0.62626403570175171" green="0.92157292366027832" blue="0.82281714677810669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="Reset"/>
+                                        <state key="normal" title="Reset">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="clearFilters:" destination="FGm-bb-CRd" eventType="touchUpInside" id="MKl-H9-phf"/>
                                         </connections>
@@ -104,31 +110,37 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yBT-83-Llv">
                                         <rect key="frame" x="129" y="770" width="156" height="30"/>
                                         <color key="backgroundColor" red="0.62626403570175171" green="0.92157292366027832" blue="0.82281714677810669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="Save"/>
+                                        <state key="normal" title="Save and Upload">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="saveAndSendImage:" destination="FGm-bb-CRd" eventType="touchUpInside" id="hka-bH-pjs"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transfer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b27-tc-M8G">
                                         <rect key="frame" x="124" y="697" width="84" height="21"/>
+                                        <color key="backgroundColor" red="0.91664952039718628" green="0.97266703844070435" blue="0.94589513540267944" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Noir" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gxd-CE-XBX">
                                         <rect key="frame" x="216" y="697" width="83" height="21"/>
+                                        <color key="backgroundColor" red="0.91664952039718628" green="0.97266703844070435" blue="0.94589513540267944" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blur" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a41-iI-vz9">
                                         <rect key="frame" x="307" y="697" width="83" height="20"/>
+                                        <color key="backgroundColor" red="0.91664952039718628" green="0.97266703844070435" blue="0.94589513540267944" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Sepia" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5zU-qa-A7b">
                                         <rect key="frame" x="25" y="696" width="91" height="22"/>
+                                        <color key="backgroundColor" red="0.91664952039718628" green="0.97266703844070435" blue="0.94589513540267944" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -175,6 +187,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
+                                <color key="backgroundColor" systemColor="systemPurpleColor"/>
                                 <constraints>
                                     <constraint firstItem="TA3-Wb-YQZ" firstAttribute="top" secondItem="Nfz-Hq-PcK" secondAttribute="bottom" constant="139" id="0UI-sV-NIw"/>
                                     <constraint firstItem="DcW-bt-gdj" firstAttribute="baseline" secondItem="Fit-hO-0ya" secondAttribute="baseline" id="0uo-0t-aQc"/>
@@ -189,7 +202,9 @@
                                     <constraint firstAttribute="trailing" secondItem="yBT-83-Llv" secondAttribute="trailing" constant="129" id="CI3-tQ-SVw"/>
                                     <constraint firstItem="a41-iI-vz9" firstAttribute="top" secondItem="Nfz-Hq-PcK" secondAttribute="bottom" constant="104" id="Ce7-R7-mvg"/>
                                     <constraint firstItem="TA3-Wb-YQZ" firstAttribute="leading" secondItem="UiJ-G9-cE8" secondAttribute="leading" constant="129" id="Fj7-Ys-SgV"/>
+                                    <constraint firstAttribute="trailing" secondItem="fwo-4Z-KcL" secondAttribute="trailing" constant="8" id="IQW-Jm-Aew"/>
                                     <constraint firstAttribute="trailing" secondItem="Nfz-Hq-PcK" secondAttribute="trailing" constant="8" id="Ioy-Uj-lA5"/>
+                                    <constraint firstAttribute="bottom" secondItem="fwo-4Z-KcL" secondAttribute="bottom" constant="8" id="Ir7-do-Yyq"/>
                                     <constraint firstItem="Fit-hO-0ya" firstAttribute="baseline" secondItem="VUH-Eh-vJG" secondAttribute="baseline" id="LGw-gD-fT3"/>
                                     <constraint firstItem="VUH-Eh-vJG" firstAttribute="leading" secondItem="Gxd-CE-XBX" secondAttribute="leading" id="Lm2-fp-6Pj"/>
                                     <constraint firstItem="Z7K-lK-fwi" firstAttribute="firstBaseline" secondItem="VUH-Eh-vJG" secondAttribute="firstBaseline" id="MBJ-v9-tjk"/>
@@ -220,6 +235,7 @@
                                     <constraint firstItem="yBT-83-Llv" firstAttribute="leading" secondItem="UiJ-G9-cE8" secondAttribute="leading" constant="129" id="jbW-Ts-deQ"/>
                                     <constraint firstItem="DcW-bt-gdj" firstAttribute="baseline" secondItem="Z7K-lK-fwi" secondAttribute="baseline" id="mhh-vJ-m2f"/>
                                     <constraint firstItem="b27-tc-M8G" firstAttribute="leading" secondItem="5zU-qa-A7b" secondAttribute="trailing" constant="8" symbolic="YES" id="mnd-oi-IJA"/>
+                                    <constraint firstItem="fwo-4Z-KcL" firstAttribute="leading" secondItem="UiJ-G9-cE8" secondAttribute="leading" constant="8" id="oQG-N0-S5y"/>
                                     <constraint firstItem="DcW-bt-gdj" firstAttribute="firstBaseline" secondItem="Fit-hO-0ya" secondAttribute="firstBaseline" id="oQb-Un-yOZ"/>
                                     <constraint firstItem="DcW-bt-gdj" firstAttribute="leading" secondItem="a41-iI-vz9" secondAttribute="leading" id="pW6-0P-qDM"/>
                                     <constraint firstItem="TA3-Wb-YQZ" firstAttribute="top" secondItem="Gxd-CE-XBX" secondAttribute="bottom" constant="14" id="paJ-dr-Efb"/>
@@ -227,6 +243,7 @@
                                     <constraint firstItem="Fit-hO-0ya" firstAttribute="leading" secondItem="UiJ-G9-cE8" secondAttribute="leading" constant="25" id="tGF-e1-lw8"/>
                                     <constraint firstItem="b27-tc-M8G" firstAttribute="top" secondItem="Z7K-lK-fwi" secondAttribute="bottom" constant="8" symbolic="YES" id="tZz-8j-olg"/>
                                     <constraint firstItem="Nfz-Hq-PcK" firstAttribute="leading" secondItem="UiJ-G9-cE8" secondAttribute="leading" constant="8" id="tn3-DV-D04"/>
+                                    <constraint firstItem="fwo-4Z-KcL" firstAttribute="top" secondItem="Nfz-Hq-PcK" secondAttribute="bottom" constant="8" symbolic="YES" id="vRU-Ew-igq"/>
                                     <constraint firstItem="b27-tc-M8G" firstAttribute="leading" secondItem="5zU-qa-A7b" secondAttribute="trailing" constant="8" symbolic="YES" id="vVO-cR-Hcn"/>
                                     <constraint firstItem="Fit-hO-0ya" firstAttribute="firstBaseline" secondItem="VUH-Eh-vJG" secondAttribute="firstBaseline" id="wk2-VS-jLN"/>
                                     <constraint firstItem="Fit-hO-0ya" firstAttribute="leading" secondItem="5zU-qa-A7b" secondAttribute="leading" id="xBB-Xu-nj7"/>
@@ -250,6 +267,7 @@
                     <navigationItem key="navigationItem" id="agR-LH-q3F"/>
                     <connections>
                         <outlet property="image" destination="Nfz-Hq-PcK" id="LxT-He-g5t"/>
+                        <outlet property="smallView" destination="fwo-4Z-KcL" id="jdJ-fE-Kuo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rHi-Xf-Lfz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -283,8 +301,8 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemTealColor">
-            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemPurpleColor">
+            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
